# race_LfD

./: README.md
pc_processing/: .localtags  CMakeLists.txt  mainpage.dox  manifest.xml
pc_processing/include/pc_processing/: pc_processing.h
pc_processing/src/: .localtags  pc_processing.cpp
race_3d_object_tracking/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelets.xml
race_3d_object_tracking/config/: tracker_default_params1.yaml
race_3d_object_tracking/include/race_3d_object_tracking/: race_3d_object_tracking.h
race_3d_object_tracking/launch/: spawn_tracker.launch  tracker.launch
race_3d_object_tracking/msg/: tracker_info.msg
race_3d_object_tracking/src/: load_nodelet_fromcpp.cpp  race_3d_object_tracking.cpp  race_3d_object_tracking_example.cpp  race_3d_object_tracking_functions.cpp  race_3d_object_tracking_node.cpp  unload_nodelet_fromcpp.cpp
race_learning_by_demonstration/: .localtags  CMakeLists.txt  mainpage.dox  manifest.xml  object_msg.msg
race_learning_by_demonstration/config/: icptest.perspective  icptest.vcg  rviz.vcg
race_learning_by_demonstration/launch/: .playback.launch.swp  LbD.launch  icp_visualize.launch  playback.launch  record.launch  tabletop_segmentation_LbD.launch  tracking.launch  visualize.launch
race_learning_by_demonstration/msg/: active_object_list_msg.msg  active_object_msg.msg
race_learning_by_demonstration/src/: .localtags  gesture_detection_node.cpp  gesture_detection_node.h  icp_test.cpp  main.cpp  main.h  main_auxiliary.cpp  object_data.h
race_object_detection/: .localtags  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml  nodelets.xml
race_object_detection/include/race_object_detection/: object_data.h  race_object_detection.h
race_object_detection/launch/: object_detection.launch
race_object_detection/src/: object_detection_node.cpp  race_object_detection.cpp
race_perception_bringup/: mainpage.dox  manifest.xml
race_perception_bringup/launch/: bringup.launch  nodelet_manager.launch
race_tabletop_segmentation/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelets.xml
race_tabletop_segmentation/include/race_tabletop_segmentation/: race_tabletop_segmentation.h
race_tabletop_segmentation/launch/: call_tabletop_segmentation_service.launch  tabletop_segmentation.launch  tabletopsegmentation.launch
race_tabletop_segmentation/params/: default_params.yaml
race_tabletop_segmentation/src/: .localtags  race_tabletop_segmentation.cpp  race_tabletop_segmentation_node.cpp
